fixed spacing

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -4,16 +4,15 @@
 }
 
 #tweets-container footer {
-  border: 1px solid #F3F3F3;
-  border-bottom: 1px solid rgb(211, 211, 211);
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  border-top: #a3a3a3;
   padding: 10px;
 }
 
 #tweets-container .tweet {
   border-top: none;
-  border-bottom: #e2e2e2;
+  border-bottom: #a3a3a3;
 }
 
 #tweets-container header {
@@ -52,8 +51,6 @@
   padding-bottom: 30px;
   /*border: 1px solid #DCDCDC;*/
 }
-
-.tweets:hover {
-  border: 1px solid rgb(0, 0, 0);
-  border-radius: 5px;
+#tweets-container .tweets:hover {
+  filter: brightness(85%);
 }
